feat: adding step 2 and styling some htmls

--- a/trabalhos/etapa_0/index.html
+++ b/trabalhos/etapa_0/index.html
@@ -1,40 +1,40 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Etapa 0 | Grupo 8 - ICPG</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <style> :root { --primary: #2563eb; --secondary: #111827; --accent: #e11d48; --bg: #f5f6fa; --white: #fff; --gray: #6b7280; --border: #e5e7eb; --radius: 8px; --shadow: 0 2px 8px rgba(0, 0, 0, 0.04); --transition: 0.2s; } * { box-sizing: border-box; margin: 0; padding: 0; } html, body { background: var(--bg); color: var(--secondary); font-family: 'Roboto', sans-serif; font-size: 17px; line-height: 1.6; min-height: 100vh; } body { display: flex; flex-direction: column; min-height: 100vh; } main.container { max-width: 900px; margin: 0 auto; background: var(--white); border-radius: var(--radius); box-shadow: var(--shadow); padding: 36px 24px 24px 24px; margin-bottom: 32px; margin-top: 24px; } section { margin-bottom: 36px; } h2 { font-size: 1.4rem; font-weight: 600; color: var(--primary); margin-bottom: 18px; letter-spacing: 0.2px; } h3 { font-size: 1.1rem; font-weight: 500; color: var(--secondary); margin-bottom: 12px; } h4 { font-size: 1rem; font-weight: 500; color: var(--primary); margin-bottom: 8px; } ul { margin-left: 18px; margin-bottom: 12px; } li { margin-bottom: 6px; } .entrevista, .cenario, .requisitos, .referencias, .section { background: #f3f4f6; padding: 18px 14px; border-radius: var(--radius); margin-bottom: 18px; } table { width: 100%; border-collapse: collapse; margin-bottom: 18px; } th, td { padding: 8px 10px; border: 1px solid var(--border); text-align: left; } th { background: var(--primary); color: var(--white); } tr:nth-child(even) { background: #f9fafb; } tr:nth-child(odd) { background: #f3f4f6; } footer.rodape { text-align: center; padding: 24px 0 18px 0; color: var(--gray); font-size: 0.98em; border-top: 1px solid var(--border); background: var(--white); margin-top: auto; } @media (max-width: 700px) { main.container { padding-left: 8px; padding-right: 8px; } main.container { padding: 18px 6px 12px 6px; } h2 { font-size: 1.1rem; } h3 { font-size: 1rem; } .entrevista, .cenario, .requisitos, .referencias, .section { padding: 12px 7px; } } </style>
+</head>
+<body>
 <main class="container">
     <section id="trabalho" class="content-section">
         <h2>Etapa 0</h2>
         <section id="etapa0-section">
             <h3>Entrevistas</h3>
             <article class="entrevista">
-                <h4>Entrevista 1: Guilherme (Gerente de Logística)</h4>
-                <ul>
-                    <li><b>Pergunta:</b> Existe alguma tarefa repetitiva no seu trabalho que poderia ser
-                        automatizada com um programa simples?</li>
-                    <li><b>Resposta:</b> Sim, todos os dias preciso contar quantos pacotes de cada tipo chegaram ao
-                        armazém. Recebo uma planilha com uma coluna "Tipo" e preciso somar quantos de cada tipo
-                        vieram. Isso toma tempo e é fácil de errar.</li>
-                    <li><b>Pergunta:</b> Como você faz isso atualmente?</li>
-                    <li><b>Resposta:</b> Eu filtro manualmente na planilha e conto, ou uso a função de contagem do
-                        Excel, mas às vezes esqueço de atualizar.</li>
-                    <li><b>Pergunta:</b> Você gostaria de um programa que lesse a planilha e mostrasse
-                        automaticamente a contagem de cada tipo?</li>
-                    <li><b>Resposta:</b> Seria ótimo! Facilitaria muito o meu dia a dia.</li>
-                </ul>
-            </article>
+    <h4>Entrevista 1: Guilherme (Profissional Externo)</h4>
+    <ul>
+        <li><b>Pergunta:</b> Existe alguma tarefa no seu trabalho que poderia ser automatizada com o uso de câmeras e visão computacional?</li>
+        <li><b>Resposta:</b> Sim, seria muito útil contar automaticamente quantas pessoas estão presentes no armazém, principalmente em horários de pico.</li>
+        <li><b>Pergunta:</b> Como você faz isso atualmente?</li>
+        <li><b>Resposta:</b> Eu faço a contagem manualmente, olhando as imagens das câmeras de segurança ou indo até o local, mas às vezes posso me confundir ou perder alguém.</li>
+        <li><b>Pergunta:</b> Você acha que um sistema que usasse as câmeras para contar as pessoas em tempo real ajudaria?</li>
+        <li><b>Resposta:</b> Com certeza! Isso economizaria tempo e evitaria erros, além de permitir um controle mais preciso da ocupação do armazém.</li>
+    </ul>
+</article>
             <article class="entrevista">
-                <h4>Entrevista 2: Victor Hugo (Supervisor de Obras)</h4>
-                <ul>
-                    <li><b>Pergunta:</b> Você tem alguma tarefa repetitiva que poderia ser automatizada com um
-                        programa simples?</li>
-                    <li><b>Resposta:</b> Sim, preciso conferir diariamente quantos funcionários de cada função estão
-                        presentes na obra. Tenho uma lista com o nome e a função de cada um, mas preciso contar
-                        quantos pedreiros, eletricistas, etc. estão presentes.</li>
-                    <li><b>Pergunta:</b> Como faz isso hoje?</li>
-                    <li><b>Resposta:</b> Eu conto manualmente na lista, mas às vezes me confundo ou esqueço alguém.
-                    </li>
-                    <li><b>Pergunta:</b> Um programa que lesse a lista e mostrasse a quantidade de cada função
-                        ajudaria?</li>
-                    <li><b>Resposta:</b> Com certeza! Seria muito útil e evitaria erros.</li>
-                </ul>
-            </article>
+    <h4>Entrevista 2: Victor Hugo (Profissional Externo)</h4>
+    <ul>
+        <li><b>Pergunta:</b> Você vê alguma tarefa no seu trabalho que poderia ser automatizada com câmeras e visão computacional?</li>
+        <li><b>Resposta:</b> Sim, no canteiro de obras, registramos manualmente as placas dos carros que entram e saem. Isso toma tempo e pode gerar erros.</li>
+        <li><b>Pergunta:</b> Como esse processo é feito hoje?</li>
+        <li><b>Resposta:</b> Temos um porteiro que anota as placas em uma planilha ou caderno, mas às vezes ele se distrai ou escreve errado.</li>
+        <li><b>Pergunta:</b> Um sistema que lesse automaticamente as placas dos carros usando as câmeras seria útil?</li>
+        <li><b>Resposta:</b> Seria ótimo! Facilitaria o controle de acesso e reduziria o risco de erro humano.</li>
+    </ul>
+</article>
             <hr>
             <article class="entrevista">
                 <h4>Entrevista 3 – Irmã (Profissional Externa)</h4>
@@ -85,3 +85,9 @@
         </section>
     </section>
 </main>
+<footer class="rodape">
+    &copy; 2025 Grupo 8 - ICPG | Visão Computacional - UFABC<br>
+    <img src="https://www.ufabc.edu.br/images/identidade-visual/ufabc-logo-horizontal-cor.png" alt="UFABC Logo" height="32" style="margin-top:10px;">
+</footer>
+</body>
+</html>
