adds lab_3 index

--- a/relatorios/index.html
+++ b/relatorios/index.html
@@ -45,9 +45,9 @@
     <ul>
         <li><a href="lab_1/lab1.html">Laboratório 1: Captura de Imagem e Vídeo</a></li>
         <li><a href="lab_2/index.html">Laboratório 2: Processamento de Imagens</a></li>
-        <li><a href="lab3.html">Laboratório 3: Reconhecimento de Objetos</a></li>
-        <li><a href="lab4.html">Laboratório 4: Análise de Vídeo</a></li>
-        <li><a href="lab5.html">Laboratório 5: Projeto Final</a></li>
+        <li><a href="lab_3/index.html">Laboratório 3: Reconhecimento de Objetos</a></li>
+        <li><a href="lab_4/index.html">Laboratório 4: Análise de Vídeo</a></li>
+        <li><a href="lab_5/index.html">Laboratório 5: Projeto Final</a></li>
     </ul>
     <footer>
         &copy; 2025 Grupo 8 - ICPG | Visão Computacional - UFABC
