--- a/relatorios/index.html
+++ b/relatorios/index.html
@@ -44,8 +44,8 @@
     <p>Bem-vindo ao índice de relatórios do Grupo 8 - ICPG. Aqui você encontrará uma lista dos relatórios desenvolvidos ao longo do curso de Visão Computacional.</p>
     <ul>
         <li><a href="lab_1/lab1.html">Laboratório 1: Captura de Imagem e Vídeo</a></li>
-        <li><a href="lab_2/index.html">Laboratório 2: Processamento de Imagens</a></li>
-        <li><a href="lab_3/index.html">Laboratório 3: Reconhecimento de Objetos</a></li>
+        <li><a href="lab_2/index.html">Laboratório 2: Calibração de Cameras</a></li>
+        <li><a href="lab_3/index.html">Laboratório 3: Camera Estéreo</a></li>
         <li><a href="lab_4/index.html">Laboratório 4: Análise de Vídeo</a></li>
         <li><a href="lab_5/index.html">Laboratório 5: Projeto Final</a></li>
     </ul>
