adds index lab4

--- a/relatorios/index.html
+++ b/relatorios/index.html
@@ -46,7 +46,7 @@
         <li><a href="lab_1/lab1.html">Laboratório 1: Captura de Imagem e Vídeo</a></li>
         <li><a href="lab_2/index.html">Laboratório 2: Calibração de Cameras</a></li>
         <li><a href="lab_3/index.html">Laboratório 3: Camera Estéreo</a></li>
-        <li><a href="lab_4/index.html">Laboratório 4: Análise de Vídeo</a></li>
+        <li><a href="lab_4/index.html">Laboratório 4: Mapa de Profundidade</a></li>
         <li><a href="lab_5/index.html">Laboratório 5: Extração de Características</a></li>
     </ul>
     <footer>
